--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18"
   },
   "devDependencies": {
